<resources>
    <string name="app_name">KidzStarz</string>
    <string name="kid_error_name">Please enter a name (min 2 chars)</string>
    <string name="kpz_hint_kidname">Please enter a name (min 2 chars)</string>
    <string name="ksz_add_kid">Add Kid</string>
    <string name="kidname_button_save">Save</string>
    <string name="kidname_button_cancel">Cancel</string>
    <string name="ksz_add_planz">Add Planz</string>
    <string name="ksz_hint_planname">Please enter a name (min 2 chars)</string>
    <string name="ksz_choose_reward">Choose your reward</string>
    <string name="ksz_hint_planitemname">Please enter a name (min 2 chars)</string>
    <string name="ksz_add_planItemz">Tasks</string>
    <string name="ksz_set_plan_mood">How are feeling?</string>
    <string name="deletekid_confirm_button">Yes!</string>
    <string name="ksz_delete_kid">Are you sure you want to delete?</string>
    <string name="deletekid_cancel_button">No</string>
    <string name="deleteplan_cancel_button">No</string>
    <string name="deleteplan_confirm_button">Yes!</string>
    <string name="ksz_delete_plan">Are you sure you want to delete?</string>
    <string name="main_adMob_unit_id">ca-app-pub-7065714443867225/4437512926</string>
    <string name="details_adMob_unit_id">ca-app-pub-7065714443867225/5073412520</string>
    <string name="ksz_hint_happystar_desc">Well done!! What happened?</string>
    <string name="ksz_hint_happystar_count">Happy Starz Count</string>
    <string name="kks_button_cancel">Cancel</string>
    <string name="ksz_button_save">Save</string>
    <string name="ksz_button_cancel">Cancel</string>
    <string name="ksz_hint_sadstar_desc">Oh no...What happened?</string>
    <string name="ksz_hint_sadstar_count">Sad Starz Count</string>
    <string name="star_desc_error">min 2 chars</string>
    <string name="total_starz">Total Starz</string>
    <string name="star_count_error">we need a number</string>
    <string name="ksz_starz_list">Starz List</string>
    <string name="ksz_claim_starz">Claim Starz</string>
    <string name="ksz_enter_starz_being_claimed">How many starz?</string>
    <string name="ksz_hint_claimedstarz_count">Claimed Starz Count</string>
    <string name="capture_this_moment">Capture this moment</string>
    <string name="ksz_hint_claimedstarz_desc">Tell us about it</string>
    <string name="ksz_button_claim">Claim</string>

    <string name="some_fields_are_empty">Some fields are empty</string>
    <string name="maximum_redeem_point">Maximum starz can be claimed is</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="claim">Claim</string>
    <string name="skip">Skip</string>

    <!--<string name="plan_adMob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="kid_adMob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_adMob_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    -->
</resources>
