<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/happystar_desc_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/ksz_hint_happystar_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/happystar_desc_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/happystar_count_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/ksz_hint_happystar_count">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/happystar_count_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/happystar_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/ksz_button_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/happystar_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/happystar_save_button"
            android:layout_toLeftOf="@id/happystar_save_button"
            android:text="@string/ksz_button_cancel" />

    </RelativeLayout>

</LinearLayout>
