<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailsActivity">

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/kid_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="null"
                    android:src="@drawable/happystar" />

                <TextView
                    android:id="@+id/happy_starz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+10"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="3">

                <ImageView
                    android:id="@+id/kid_monster_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ksz_kidz_card_image_height"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="null"
                    android:src="@drawable/sadstar" />

                <TextView
                    android:id="@+id/sad_starz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-10"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/DetailsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/colorPrimaryDark"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kid_card">

        <TextView
            android:id="@+id/starz_list_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/ksz_starz_list"
            android:textSize="20sp"
            android:textStyle="italic|bold" />
    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@color/taskGridBackgroundColor"
        android:paddingStart="@dimen/ksz_starz_grid_spacing"
        android:paddingEnd="@dimen/ksz_starz_grid_spacing"
        app:layout_constraintBottom_toTopOf="@id/claim_starz_framelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DetailsLinearLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/starz_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/claim_starz_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/claim_starz"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_60"
            android:layout_marginBottom="@dimen/margin_50"
            android:background="@drawable/ksz_button_background"
            android:text="@string/ksz_claim_starz"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_25"></androidx.appcompat.widget.AppCompatButton>
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/details_adMob_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kid_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>